cmake_minimum_required(VERSION 3.23)
project(LeetCode)

set(CMAKE_CXX_STANDARD 23)

add_executable(LeetCode main.cpp 0217-contains-duplicate.cpp 0242-valid-anagram.cpp 0001-two-sum.cpp 0049-group-anagrams.cpp 0347-top-k-frequent-elements.cpp 0015-3sum.cpp 0238-product-of-array-except-self.cpp 0042-trapping-rain-water.cpp 0036-valid-sudoku.cpp 0128-longest-consecutive-sequence.cpp 0020-valid-parentheses.cpp 0155-min-stack.cpp 0150-evaluate-reverse-polish-notation.cpp 0022-generate-parentheses.cpp)
